--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=file
-*.css linguist-language=file
-*.html linguist-language=file
+*.js linguist-language=java
+*.css linguist-language=java
+*.html linguist-language=java
